# arenalander-league-bot

./: .gitignore  LICENSE  README.md  admin.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  heroku.yml  import-set-scryfall.py  import-set.py  pyproject.toml  split.txt
bot-rs/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  diesel.toml
bot-rs/db-setup/: AllPrintings.sqlite
bot-rs/docker/: Dockerfile  Dockerfile.release
bot-rs/migrations/2020-04-22-225049_create_initial_tables/: down.sql  up.sql
bot-rs/migrations/2020-04-23-211127_alter_mtgjson/: down.sql  up.sql
bot-rs/migrations/2020-04-24-205441_record_view/: down.sql  up.sql
bot-rs/migrations/2020-04-25-191635_deck_view_tokens/: down.sql  up.sql
bot-rs/migrations/2020-04-30-171151_leaderboard_view/: down.sql  up.sql
bot-rs/migrations/2020-07-12-050636_card_uuid_unique/: down.sql  up.sql
bot-rs/migrations/2020-07-19-015528_card_names/: down.sql  up.sql
bot-rs/migrations/2020-07-19-222252_card_scryfalloracleid_index/: down.sql  up.sql
bot-rs/migrations/2020-07-31-023810_gql-indices/: down.sql  up.sql
bot-rs/migrations/2020-08-06-011440_symbol-counts/: down.sql  up.sql
bot-rs/resources/public/css/: base.css  columns.css  deck.css  libertine.css  standings.css  standings_list.css  tufte.css  tufte_ext.css
bot-rs/resources/public/js/: deck.js
bot-rs/src/: cards.rs  deck_parser.rs  gm_too_small.txt  jmp_deck.txt  main.rs  mana_parser.rs  models.rs  records.rs  schema.patch  schema.rs  schema.rs.orig  schema.rs.rej  schema_bak.rs  test_invalid.txt  test_main_only.txt  test_uw.txt  web.rs
bot-rs/src/actions/: league.rs  lookup.rs  matches.rs  mod.rs  register.rs  token.rs
bot-rs/src/commands/: admin.rs  matches.rs  mod.rs  top_level.rs  util.rs
bot-rs/src/web/: deck.rs  graphql.rs  mod.rs  standings.rs
bot-rs/templates/: base.html  deck.html  standings.html  standings_list.html
db-setup/: Dockerfile  allprintings_prep.sh  test_data.sql
prod/: .gitignore
prod/nginx/: app.conf
