[tool.poetry]
name = "gladiator-league-bot"
version = "0.1.0"
description = ""
authors = ["David Smith <emallson@emallson.net>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
sqlalchemy = "^1.3.18"
docopt = "^0.6.2"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
ipython = "^7.16.3"
python-language-server = {extras = ["all"], version = "^0.34.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
