[package]
name = "bot-rs"
version = "0.1.0"
authors = ["emallson <emallson@atlanis.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
serenity = "0.8.5"
dotenv = "0.15.0"
chrono = "0.4.11"
scryfall = "0.5.0"
nom = "5.1.1"
anyhow = "1.0.28"
thiserror = "1.0.15"
maplit = "1.0.2"
