[package]
name = "bot-rs"
version = "0.1.0"
authors = ["emallson <emallson@atlanis.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuidv07", "r2d2"] }
serenity = "0.8.5"
dotenv = "0.15.0"
chrono = "0.4.11"
nom = "5.1.1"
anyhow = "1.0.28"
thiserror = "1.0.15"
uuid = { version = "0.7", features = ["v4"] }
chrono-english = "0.1.4"
fern = "0.6.0"
log = "0.4.8"
askama = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.1.0"
actix-files = "0.2.1"
qstring = "0.7.2"
sentry = { version = "0.18.0", features = ["with_log"]}
juniper = "0.14.2"
serde_json = "1.0.56"
regex = "1"

[[bin]]
name = "bot"
path = "src/main.rs"

[[bin]]
name = "dummy"
path = "dummy.rs"
